# Fedi-Sleuth

./: .gitignore  Cargo.toml  README.md  REQUIREMENTS.md
src/: main.rs
src/app/: mod.rs
src/assets/: styles.css
src/components/: mod.rs  output_panel.rs  search_panel.rs  settings_panel.rs  status_bar.rs
src/config/: mod.rs
src/models/: mod.rs
src/services/: auth_service.rs  bluesky_service.rs  download_service.rs  mastodon_service.rs  mod.rs  pixelfed_service.rs  platform_trait.rs  settings_service.rs
