[package]
name = "pixelfed-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Modern Windows 11 application for searching and downloading content from Pixelfed instances"
license = "MIT"

[dependencies]
# Dioxus framework for desktop apps
dioxus = "0.4"
dioxus-desktop = { version = "0.4", features = ["tokio"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "stream"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OAuth and authentication
oauth2 = "4.4"
url = "2.4"

# File system operations and downloads
dirs = "5.0"
futures-util = "0.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration and settings
config = "0.13"
confy = "0.5"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Base64 encoding/decoding
base64 = "0.21"

# Regular expressions
regex = "1.0"

# URL encoding
urlencoding = "2.1"

# Windows-specific features
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1